Implemented word endpoint 'GET - /v1/word'
