# backend/openapi.yml
@@ -201,6 +201,83 @@ paths:
           description: missing query parameter
         '500':
           description: Executing error
+  # [v1] GET - /v1/word
+  /v1/word:
+    get:
+      tags: [v1]
+      summary: Get a list of words and their number.
+      parameters:
+        - name: dbs
+          in: query
+          description: MongoDB database names
+          required: true
+          schema:
+            type: array
+        - name: algorithm
+          in: query
+          description: all, sent-it or feel-it
+          required: false
+          schema:
+            type: string
+        - name: sentiment
+          in: query
+          description: all, positive, neutral or negative
+          required: false
+          schema:
+            type: string
+        - name: emotion
+          in: query
+          description: (only if algorithm = 'feel-it'), all, joy, sadness anger or fear
+          required: false
+          schema:
+            type: string
+        - name: dateFrom
+          in: query
+          description: ISO date like 2022-01-09T00:00:00.000Z (dateTo required)
+          required: false
+          schema:
+            type: string
+        - name: dateTo
+          in: query
+          description: ISO date like 2022-01-09T00:00:00.000Z (dateFrom required)
+          required: false
+          schema:
+            type: string
+        - name: tags
+          in: query
+          description: A list of tags
+          required: false
+          schema:
+            type: array
+        - name: processedText
+          in: query
+          description: A list processed words
+          required: false
+          schema:
+            type: array
+        - name: hashtags
+          in: query
+          description: A list of hashtags (# not required)
+          required: false
+          schema:
+            type: array
+        - name: usernames
+          in: query
+          description: A list of usernames
+          required: false
+          schema:
+            type: array
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/v1_word'
+        '400':
+          description: missing query parameter
+        '500':
+          description: Executing error
 components:
   schemas:
     # [LEGACY]
@@ -267,5 +344,13 @@ components:
           "neutralCount": number,
           "negativeCount": number,
           "date": '2023-02-21'
+        }
+      ]
+    v1_word:
+      type: array
+      example: [
+        {
+          "word": string,
+          "count": number
         }
       ]
